# asterisk-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  clippy.toml  deny.toml  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  integration.yml  labeler.yml  release.yml  security.yml  semver.yml  update-readme-versions.yml
.omp/rules/: asterisk.md  rust.md
.omp/skills/update-docs/: SKILL.md
.omp/skills/update-docs/reference/: file-specs.md
.omp/skills/update-docs/scripts/: extract-workspace-meta.py
crates/asterisk-agi/: Cargo.toml
crates/asterisk-agi/examples/: agi_server.rs
crates/asterisk-agi/src/: channel.rs  error.rs
crates/asterisk-ami/: Cargo.toml
crates/asterisk-ami/examples/: ami_events.rs  ami_originate.rs
crates/asterisk-ami/src/: client.rs  codec.rs  error.rs  event.rs  lib.rs  response.rs
crates/asterisk-ari/: Cargo.toml
crates/asterisk-ari/examples/: ari_bridge.rs  ari_stasis_app.rs
crates/asterisk-ari/src/: config.rs  error.rs  event.rs  websocket.rs
crates/asterisk-ari/src/resources/: bridge.rs  channel.rs  endpoint.rs  playback.rs  recording.rs  sound.rs
crates/asterisk-rs/: CHANGELOG.md  Cargo.toml
crates/asterisk-rs-agi/: CHANGELOG.md  Cargo.toml  README.md
crates/asterisk-rs-agi/examples/: agi_ivr.rs  agi_server.rs
crates/asterisk-rs-agi/src/: channel.rs  command.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  server.rs
crates/asterisk-rs-ami/: CHANGELOG.md  Cargo.toml  README.md
crates/asterisk-rs-ami/examples/: ami_call_tracker.rs  ami_events.rs  ami_originate.rs
crates/asterisk-rs-ami/src/: action.rs  client.rs  codec.rs  connection.rs  error.rs  event.rs  lib.rs  response.rs  tracker.rs
crates/asterisk-rs-ari/: CHANGELOG.md  Cargo.toml  README.md
crates/asterisk-rs-ari/examples/: ari_bridge.rs  ari_pending.rs  ari_recording.rs  ari_stasis_app.rs  ari_websocket_transport.rs
crates/asterisk-rs-ari/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  media.rs  pending.rs  server.rs  transport.rs  util.rs  websocket.rs  ws_proto.rs  ws_transport.rs
crates/asterisk-rs-ari/src/resources/: application.rs  asterisk.rs  bridge.rs  channel.rs  device_state.rs  endpoint.rs  mailbox.rs  mod.rs  playback.rs  recording.rs  sound.rs
crates/asterisk-rs-core/: CHANGELOG.md  Cargo.toml  README.md
crates/asterisk-rs-core/src/: auth.rs  config.rs  error.rs  event.rs  lib.rs  types.rs
crates/asterisk-rs/examples/: pbx_dial.rs
crates/asterisk-rs/src/: lib.rs  pbx.rs
docs/: book.toml  generate.py
docs/src/: SUMMARY.md  getting-started.md  types.md
docs/src/agi/: fastagi.md  overview.md  reference.md
docs/src/ami/: connection.md  events.md  overview.md  reference.md
docs/src/ari/: overview.md  reference.md  resources.md  stasis.md
tests/: Cargo.toml  docker-compose.yml
tests/asterisk/: Dockerfile
tests/asterisk/conf/: ari.conf  extensions.conf  manager.conf  pjsip.conf
tests/src/: helpers.rs  lib.rs
tests/src/mock/: agi_client.rs  ami_server.rs  ari_server.rs  mod.rs
tests/tests/: agi_integration.rs  agi_mock.rs  ami_integration.rs  ami_mock.rs  ari_integration.rs  ari_mock.rs  live_integration.rs  mock_integration.rs  unit.rs
tests/tests/common/: mod.rs
tests/tests/live_tests/: agi.rs  ami.rs  ari.rs  cross_protocol.rs
tests/tests/mock/: ami_server.rs  ari_server.rs  mod.rs
tests/tests/mock_tests/: agi.rs  ami.rs  ari.rs
tests/tests/unit/: agi.rs  ami_actions.rs  ami_codec.rs  ami_events.rs  ami_response.rs  ami_tracker.rs  ari.rs  core_tests.rs  pbx.rs
