[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deadcode-walker/asterisk-rs"
homepage = "https://github.com/deadcode-walker/asterisk-rs"
keywords = ["asterisk", "voip", "telephony", "pbx", "sip"]
categories = ["network-programming", "api-bindings"]

[workspace.lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
md-5 = "0.10"
base64 = "0.22"
url = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pin-project-lite = "0.2"
tracing-subscriber = "0.3"
