[package]
name = "asterisk-rs-agi"
version = "0.2.0"
description = "Async Rust FastAGI server for Asterisk Gateway Interface"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
asterisk-rs-core = { path = "../asterisk-rs-core", version = "0.2.0" }
tokio = { workspace = true, features = ["net", "sync", "time", "io-util", "macros", "rt"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
