[package]
name = "asterisk-rs-ami"
version = "0.3.0"
description = "Async Rust client for the Asterisk Manager Interface (AMI)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
asterisk-rs-core = { path = "../asterisk-rs-core", version = "0.2.0" }
tokio = { workspace = true, features = ["net", "sync", "time", "io-util", "macros", "rt"] }
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
md-5.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
serde.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
