[package]
name = "asterisk-rs-core"
version = "0.6.0"
description = "Shared types, error framework, and event bus for asterisk-rs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, optional = true }
pin-project-lite.workspace = true
zeroize.workspace = true

[features]
default = []
serde = ["dep:serde"]
