[package]
name = "asterisk-rs"
version = "0.1.3"
description = "Production Rust client for Asterisk AMI, AGI, and ARI"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
asterisk-rs-core = { path = "../asterisk-rs-core", version = "0.2.0" }
asterisk-rs-ami = { path = "../asterisk-rs-ami", version = "0.3.0", optional = true }
asterisk-rs-agi = { path = "../asterisk-rs-agi", version = "0.2.0", optional = true }
asterisk-rs-ari = { path = "../asterisk-rs-ari", version = "0.3.0", optional = true }

[features]
default = ["ami", "agi", "ari"]
ami = ["dep:asterisk-rs-ami"]
agi = ["dep:asterisk-rs-agi"]
ari = ["dep:asterisk-rs-ari"]
