[package]
name = "asterisk-rs"
version = "0.7.0"
description = "Async Rust client for Asterisk AMI, AGI, and ARI"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
asterisk-rs-core = { path = "../asterisk-rs-core", version = "0.7.0" }
asterisk-rs-ami = { path = "../asterisk-rs-ami", version = "0.7.0", optional = true }
asterisk-rs-agi = { path = "../asterisk-rs-agi", version = "0.7.0", optional = true }
asterisk-rs-ari = { path = "../asterisk-rs-ari", version = "0.7.0", optional = true }
thiserror.workspace = true
tokio.workspace = true

[features]
default = ["ami", "agi", "ari"]
ami = ["dep:asterisk-rs-ami"]
agi = ["dep:asterisk-rs-agi"]
ari = ["dep:asterisk-rs-ari"]

[[example]]
name = "pbx_dial"
required-features = ["ami"]

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
